examples/kraken-interpol/public/templates/errors/index.int
from layouts import master
import locales as str

def render(statusCode, url, err)
  let title = str.US_en.errors['http_'+statusCode].header
  master(title, body)

  def body
    str.US_en.errors['http_'+statusCode].description(url, err)
  end

end
